--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^4.1.5",
+    "axios": "^0.19.0",
     "expo": "^34.0.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -18,10 +19,14 @@
     "react-native-reanimated": "~1.1.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
-    "react-navigation-header-buttons": "^3.0.2"
+    "react-navigation-header-buttons": "^3.0.2",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "^6.0.0",
+    "schedule": "0.5.0"
   },
   "private": true
 }
