--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@react-native-community/netinfo": "^4.1.5",
     "axios": "^0.19.0",
     "expo": "^34.0.1",
+    "native-base": "^2.13.5",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.1.0",
+    "react-native-root-toast": "^3.1.2",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
     "react-navigation-header-buttons": "^3.0.2",
@@ -26,7 +28,7 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
-    "schedule": "0.5.0"
+    "schedule": "^0.5.0"
   },
   "private": true
 }
