--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-picker-select": "^6.3.2",
     "react-native-reanimated": "~1.1.0",
     "react-native-root-toast": "^3.1.2",
     "react-native-web": "^0.11.4",
